Preliminary work on Calendar heat map

--- a/CalendarExt/CalendarExt.rc
+++ b/CalendarExt/CalendarExt.rc
@@ -131,7 +131,7 @@ EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma"
 BEGIN
     CTEXT           "01/01/2001 10:12 AM - 01/01/2001 11:12 PM",
-                    IDC_SELECTEDTASKDATES,244,13,285,12,SS_CENTERIMAGE | 
+                    IDC_SELECTEDTASKDATES,332,13,197,12,SS_CENTERIMAGE | 
                     SS_SUNKEN
     LTEXT           "Dis&play",IDC_STATIC,0,2,79,8
     COMBOBOX        IDC_NUMWEEKS,0,13,79,200,CBS_DROPDOWNLIST | WS_TABSTOP
@@ -139,9 +139,13 @@ BEGIN
     COMBOBOX        IDC_SNAPMODES,87,13,79,161,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Snap Mode",IDC_STATIC,87,2,79,8
-    LTEXT           "Selected Task &Date Range",IDC_STATIC,244,2,210,8
+    LTEXT           "Selected Task &Date Range",IDC_STATIC,332,2,197,8
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE,172,12,62,17
+    COMBOBOX        IDC_HEATMAP,239,13,79,161,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "&Heat Map",IDC_STATIC,239,2,79,8
 END
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
