--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -481,6 +481,9 @@
     <ClCompile Include="ComboListboxPositioner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorBrewerCombobox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -997,6 +1000,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ComboListboxPositioner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorBrewerCombobox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
