--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -484,6 +484,9 @@
     <ClCompile Include="ColorBrewerCombobox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorBrewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1003,6 +1006,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ColorBrewerCombobox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorBrewer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
