Add ColorBrewer schemes to Priority coloring

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -720,13 +720,13 @@ BEGIN
                     WS_TABSTOP,7,495,379,10
 END
 
-IDD_PREFUITASKLISTCOLORS_PAGE DIALOG DISCARDABLE  0, 0, 401, 574
+IDD_PREFUITASKLISTCOLORS_PAGE DIALOG DISCARDABLE  0, 0, 401, 608
 STYLE WS_POPUP
 FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&Tasklist font",IDC_SPECIFYTREEFONT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,10,387,10
-    COMBOBOX        IDC_TREEFONTLIST,18,22,165,237,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_TREEFONTLIST,18,22,185,237,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Point size",IDC_TREEFONTSIZELABEL,18,40,376,8
     COMBOBOX        IDC_TREEFONTSIZE,18,52,55,237,CBS_DROPDOWNLIST | 
@@ -736,7 +736,7 @@ BEGIN
                     WS_TABSTOP,18,70,383,10
     CONTROL         "&Comments font",IDC_SPECIFYCOMMENTSFONT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,85,387,10
-    COMBOBOX        IDC_COMMENTSFONTLIST,18,97,165,237,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_COMMENTSFONTLIST,18,97,185,237,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Point size",IDC_COMMENTSFONTSIZELABEL,18,115,376,8
     COMBOBOX        IDC_COMMENTSFONTSIZE,18,127,50,237,CBS_DROPDOWNLIST | 
@@ -747,6 +747,8 @@ BEGIN
                     BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,18,160,376,10
     CONTROL         "&Gradient:",IDC_GRADIENTPRIORITYCOLORS,"Button",
                     BS_AUTORADIOBUTTON | WS_TABSTOP,18,190,376,10
+    CONTROL         "Predefined S&cheme",IDC_SCHEMEPRIORITYCOLORS,"Button",
+                    BS_AUTORADIOBUTTON,18,235,77,10
     COMBOBOX        IDC_PRIORITYCOLORS,29,172,112,136,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
                     WS_GROUP | WS_TABSTOP
@@ -757,63 +759,66 @@ BEGIN
     CONTROL         "Use HS&L to calculate intermediate colours",
                     IDC_USEHLSGRADIENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
                     30,220,364,10
+    COMBOBOX        IDC_PRIORITYSCHEMES,29,247,173,136,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_GROUP | WS_TABSTOP
     CONTROL         "&Hide 'Priority' number ",IDC_HIDEPRIORITYNUMBER,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,235,387,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,265,387,10
     CONTROL         "Show &gridlines",IDC_SPECIFYGRIDLINECOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,250,140,10
-    PUSHBUTTON      "S&et...   ",IDC_SETGRIDLINECOLOR,149,248,52,13,BS_RIGHT
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,280,140,10
+    PUSHBUTTON      "S&et...   ",IDC_SETGRIDLINECOLOR,149,278,52,13,BS_RIGHT
     CONTROL         "&Alternate line colour",IDC_ALTERNATELINECOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,265,139,10
-    PUSHBUTTON      "S&et...   ",IDC_SETALTLINECOLOR,149,263,52,13,BS_RIGHT
-    LTEXT           "Task Colouring",IDC_TASKCOLOURGROUP,7,284,387,8
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,295,139,10
+    PUSHBUTTON      "S&et...   ",IDC_SETALTLINECOLOR,149,293,52,13,BS_RIGHT
+    LTEXT           "Task Colouring",IDC_TASKCOLOURGROUP,7,314,387,8
     CONTROL         "&Use a task's colour for its title background",
                     IDC_COLORTASKBKGND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    7,300,387,10
+                    7,330,387,10
     CONTROL         "&Colour task titles by:",IDC_COLORTEXTBYATTRIBUTE,
-                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,7,315,387,10
+                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,7,345,387,10
     CONTROL         "Colour task titles by &Priority",
                     IDC_COLORTEXTBYPRIORITY,"Button",BS_AUTORADIOBUTTON,7,
-                    418,387,10
+                    448,387,10
     CONTROL         "Colour task titles by &assigned colours",
-                    IDC_COLORTASKSBYCOLOR,"Button",BS_AUTORADIOBUTTON,7,433,
+                    IDC_COLORTASKSBYCOLOR,"Button",BS_AUTORADIOBUTTON,7,463,
                     387,10
     CONTROL         "&No task title colouring (except for due tasks)",
-                    IDC_NOCOLORTASKS,"Button",BS_AUTORADIOBUTTON,7,448,387,
+                    IDC_NOCOLORTASKS,"Button",BS_AUTORADIOBUTTON,7,478,387,
                     10
-    COMBOBOX        IDC_ATTRIBUTETOCOLORBY,18,327,123,99,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_ATTRIBUTETOCOLORBY,18,357,123,99,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_ATTRIBUTECOLORS,18,343,123,70,CBS_SIMPLE | 
+    COMBOBOX        IDC_ATTRIBUTECOLORS,18,373,123,70,CBS_SIMPLE | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_GROUP | 
                     WS_TABSTOP
-    PUSHBUTTON      "S&et...   ",IDC_SETATTRIBUTECOLOR,149,343,52,13,
+    PUSHBUTTON      "S&et...   ",IDC_SETATTRIBUTECOLOR,149,373,52,13,
                     BS_RIGHT
-    PUSHBUTTON      "&Populate",IDC_POPULATEATTRIBLIST,149,358,52,14
+    PUSHBUTTON      "&Populate",IDC_POPULATEATTRIBLIST,149,388,52,14
     CONTROL         "'&Started' task colour",IDC_STARTTASKCOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,465,139,10
-    PUSHBUTTON      "S&et...   ",IDC_SETSTARTTASKCOLOR,149,464,52,13,
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,495,139,10
+    PUSHBUTTON      "S&et...   ",IDC_SETSTARTTASKCOLOR,149,494,52,13,
                     BS_RIGHT
     CONTROL         "'Started &Today' task colour",IDC_STARTTODAYTASKCOLOR,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,480,139,10
-    PUSHBUTTON      "S&et...   ",IDC_SETSTARTTODAYTASKCOLOR,149,479,52,13,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,510,139,10
+    PUSHBUTTON      "S&et...   ",IDC_SETSTARTTODAYTASKCOLOR,149,509,52,13,
                     BS_RIGHT
     CONTROL         "'&Due' task colour",IDC_DUETASKCOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,495,139,10
-    PUSHBUTTON      "S&et...   ",IDC_SETDUETASKCOLOR,149,494,52,13,BS_RIGHT
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,525,139,10
+    PUSHBUTTON      "S&et...   ",IDC_SETDUETASKCOLOR,149,524,52,13,BS_RIGHT
     CONTROL         "'Due T&oday' task colour",IDC_DUETODAYTASKCOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,510,139,10
-    PUSHBUTTON      "S&et...   ",IDC_SETDUETODAYTASKCOLOR,149,509,52,13,
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,540,139,10
+    PUSHBUTTON      "S&et...   ",IDC_SETDUETODAYTASKCOLOR,149,539,52,13,
                     BS_RIGHT
     CONTROL         "Completed t&ask colour",IDC_SPECIFYDONECOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,525,138,10
-    PUSHBUTTON      "S&et...   ",IDC_SETDONECOLOR,149,524,52,13,BS_RIGHT
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,555,138,10
+    PUSHBUTTON      "S&et...   ",IDC_SETDONECOLOR,149,554,52,13,BS_RIGHT
     CONTROL         "&Flagged task colour",IDC_SPECIFYFLAGGEDCOLOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,540,140,10
-    PUSHBUTTON      "S&et...   ",IDC_SETFLAGGEDCOLOR,149,540,52,13,BS_RIGHT
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,570,140,10
+    PUSHBUTTON      "S&et...   ",IDC_SETFLAGGEDCOLOR,149,570,52,13,BS_RIGHT
     LTEXT           "to",-1,98,204,43,8
     CONTROL         "&Reference task colour",IDC_SPECIFYREFERENCECOLOR,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,555,140,10
-    PUSHBUTTON      "S&et...   ",IDC_SETREFERENCECOLOR,149,555,52,13,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,585,140,10
+    PUSHBUTTON      "S&et...   ",IDC_SETREFERENCECOLOR,149,585,52,13,
                     BS_RIGHT
 END
 
@@ -2336,6 +2341,28 @@ BEGIN
     IDC_PRIORITYCOLORS, 0x403, 9, 0
 0x2039, 0x4828, 0x6769, 0x2968, "\000" 
     IDC_PRIORITYCOLORS, 0x403, 13, 0
+0x3031, 0x2820, 0x6948, 0x6867, 0x7365, 0x2974, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 11, 0
+0x2030, 0x4c28, 0x776f, 0x7365, 0x2974, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 8, 0
+0x2031, 0x4c28, 0x776f, 0x0029, 
+    IDC_PRIORITYSCHEMES, 0x403, 8, 0
+0x2032, 0x4c28, 0x776f, 0x0029, 
+    IDC_PRIORITYSCHEMES, 0x403, 8, 0
+0x2033, 0x4c28, 0x776f, 0x0029, 
+    IDC_PRIORITYSCHEMES, 0x403, 11, 0
+0x2034, 0x4d28, 0x6465, 0x7569, 0x296d, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 11, 0
+0x2035, 0x4d28, 0x6465, 0x7569, 0x296d, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 11, 0
+0x2036, 0x4d28, 0x6465, 0x7569, 0x296d, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 9, 0
+0x2037, 0x4828, 0x6769, 0x2968, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 9, 0
+0x2038, 0x4828, 0x6769, 0x2968, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 9, 0
+0x2039, 0x4828, 0x6769, 0x2968, "\000" 
+    IDC_PRIORITYSCHEMES, 0x403, 13, 0
 0x3031, 0x2820, 0x6948, 0x6867, 0x7365, 0x2974, "\000" 
     0
 END
