--- a/CalendarExt/CalendarExt.vcxproj.filters
+++ b/CalendarExt/CalendarExt.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="TaskCalendarCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TaskMiniCalendarCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CalendarExt.h">
@@ -46,6 +49,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CalMsg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskMiniCalendarCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
