Tweak dialog text

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -747,8 +747,8 @@ BEGIN
                     BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,18,160,376,10
     CONTROL         "&Gradient:",IDC_GRADIENTPRIORITYCOLORS,"Button",
                     BS_AUTORADIOBUTTON | WS_TABSTOP,18,190,376,10
-    CONTROL         "Predefined S&cheme",IDC_SCHEMEPRIORITYCOLORS,"Button",
-                    BS_AUTORADIOBUTTON,18,235,77,10
+    CONTROL         "S&cheme",IDC_SCHEMEPRIORITYCOLORS,"Button",
+                    BS_AUTORADIOBUTTON,18,235,41,10
     COMBOBOX        IDC_PRIORITYCOLORS,29,172,112,136,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
                     WS_GROUP | WS_TABSTOP
