ongoing work to support checkbox and icon editing

--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
@@ -54,7 +54,9 @@
     </Compile>
     <Compile Include="ColorSchemeComboBox.cs" />
     <Compile Include="TaskCloudItem.cs" />
-    <Compile Include="TaskMatchesListView.cs" />
+    <Compile Include="TaskMatchesListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
