Finish inline label editing

--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
@@ -54,9 +54,7 @@
     </Compile>
     <Compile Include="ColorSchemeComboBox.cs" />
     <Compile Include="TaskCloudItem.cs" />
-    <Compile Include="TaskMatchesListView.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="TaskMatchesListView.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
