--- a/GanttChartExt/GanttChartExt.rc
+++ b/GanttChartExt/GanttChartExt.rc
@@ -87,11 +87,11 @@ BEGIN
     COMBOBOX        IDC_SNAPMODES,159,13,79,161,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Snap Mode",IDC_SNAPMODES_LABEL,159,2,79,8
-    LTEXT           "&Visible Date Range",IDC_SELECTEDDATERANGE_LABEL,354,3,
-                    233,8
+    LTEXT           "Acti&ve Date Range",IDC_ACTIVEDATERANGE_LABEL,354,3,233,
+                    8
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE,243,12,106,13
-    CONTROL         "",IDC_SELECTEDDATERANGE,"MFCRangeSlider",WS_TABSTOP,353,
+    CONTROL         "",IDC_ACTIVEDATERANGE,"MFCRangeSlider",WS_TABSTOP,353,
                     12,112,13
 END
 
@@ -433,6 +433,7 @@ BEGIN
     IDS_ATTRIB_TASKID       "Task ID"
     IDS_ATTRIB_DONEDATE     "Completion Date"
     IDS_COL_DONEDATE        "Completed"
+    IDS_ACTIVEDATERANGE     "Acti&ve Date Range (%s)"
 END
 
 #endif    // English (Australia) resources
