--- a/GanttChartExt/GanttChartExt.vcxproj
+++ b/GanttChartExt/GanttChartExt.vcxproj
@@ -175,6 +175,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="GanttDateRangeSlider.cpp" />
     <ClCompile Include="GanttPreferencesDlg.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -215,6 +216,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <ClInclude Include="GanttChartExt.h" />
     <ClInclude Include="GanttChartWnd.h" />
     <ClInclude Include="GanttCreateDependsDlg.h" />
+    <ClInclude Include="GanttDateRangeSlider.h" />
     <ClInclude Include="GanttEnum.h" />
     <ClInclude Include="GanttMsg.h" />
     <ClInclude Include="GanttPreferencesDlg.h" />
